@@ -34,8 +34,10 @@ m_muttalias_query()
 	if [ -f $file ]
 	then
 	    grep -i "$@" $file \
-	    | grep '^alias[ 	][ 	]*[^,<]*<.*>' \
-	    | sed 's/^alias[ 	][ 	]*\([^ 	]*\)[ 	][ 	]*\([^<]*\)<\([^>]*\)>.*/\3	\2	alias \1/'
+	    | grep '^alias[ 	]\+[^,]\+[ 	]\+[^,]*$' \
+	    | sed -e 's/^alias[ 	]\+\([^ 	]\+\)[ 	]\+\([^<>()]*\)<\([^<>()]*\)>[^()<>]*$/\3	\2	alias \1/' \
+	          -e 's/^alias[ 	]\+\([^ 	]\+\)[ 	]\+\([^<>()]*\)(\([^<>()]*\))[^()<>]*$/\2	\3	alias \1/' \
+	    | grep -v '^alias[ 	]\+[^,]\+[ 	]\+[^,]*$'
 	fi  
     done
 }
